--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "gatsby-plugin-mdx": "^3.4.0",
     "gatsby-plugin-nprogress": "^4.13.0",
     "gatsby-remark-highlight-code": "^3.1.0",
+    "gatsby-remark-katex": "^6.15.0",
     "gatsby-remark-prismjs": "^6.4.0",
     "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-transformer-remark": "^5.4.0",
+    "gatsby-transformer-remark": "^5.15.1",
+    "katex": "^0.16.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "prismjs": "^1.25.0",
@@ -45,8 +47,8 @@
   },
   "devDependencies": {
     "eslint": "^8.15.0",
-    "eslint-plugin-react": "^7.29.4",
     "eslint-config-react-app": "^5.1.0",
+    "eslint-plugin-react": "^7.29.4",
     "gh-pages": "^3.2.3"
   }
 }
