--- a/package.json
+++ b/package.json
@@ -35,15 +35,21 @@
     "gatsby-plugin-nprogress": "^4.13.0",
     "gatsby-remark-highlight-code": "^3.1.0",
     "gatsby-remark-katex": "^6.15.0",
+    "gatsby-remark-mathjax": "^1.0.0",
+    "gatsby-remark-mermaid": "^2.1.0",
     "gatsby-remark-prismjs": "^6.4.0",
     "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-transformer-remark": "^5.15.1",
+    "gatsby-transformer-remark": "^5.16.0",
     "katex": "^0.16.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "prismjs": "^1.25.0",
+    "puppeteer": "^14.3.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "rehype-katex": "^6.0.2",
+    "remark-html-katex": "^4.0.1",
+    "remark-math": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
